@@ -1,4 +1,4 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2017 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -9,7 +9,7 @@ MY_P="${MY_PN}-${PV}"
 
 DESCRIPTION=" Cryptographically secure pseudorandom number generator"
 HOMEPAGE="http://code.google.com/p/csrng/"
-SRC_URI="http://csrng.googlecode.com/files/${MY_P}.tar.bz2"
+SRC_URI="https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/csrng/${MY_P}.tar.bz2"
 
 LICENSE="GPL-3"
 SLOT="0"
